# SecureFileMatche

./: CMakeLists.txt  README.md  generate_worst_case_v2.py  run.bat  test.py
src/: Crypto.h  HttpServer.cpp  HttpServer.h  Matcher.cpp  Matcher.h  generator.cpp  main.cpp
test_data/: sample_encrypted.txt  secret_msg_key_4.txt  worst_case_naive.txt
web/: app.js  index.html  style.css
